<resources>
    <string name="app_name">Lab</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_message">login</string>
    <string name="password_message">password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="What_does_it_do">What does it do?</string>
    <string name="CheckBox_message">CheckBox</string>
    <string name="image_to_display">image to display</string>
    <string name="login_name">login name</string>
    <string name="dialog_message">Want to finish the activity</string>
    <string name="dialog_title">finish job</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="button_chat">Start Chat</string>
    <string name="button_send">Send</string>
    <string name="weather_forecast">Weather_Forecast</string>
    <string name="cur_temp">Current Temperature </string>
    <string name="min_temp">Minimum Temperature </string>
    <string name="max_temp">maximum Temperature </string>
    <string name="weatherImage">A weather related image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pick_color">Do you want to go back? </string>

    <string name="dialog_fire_missiles">Welcome alert dialog message </string>
</resources>
