<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2">
<RadioButton android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:text="@string/RadioButton"
    android:layout_gravity="fill_horizontal"
    />
    <CheckBox android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/CheckBox_message"/>


    <Switch android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
    android:text="@string/What_does_it_do"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:src="@android:drawable/ic_menu_camera"
        android:text="@string/image_to_display"
        android:contentDescription="@string/What_does_it_do"/>
</GridLayout>