<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context="com.lab1.a2335.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:id="@+id/buttonStart"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:onClick=""/>

    <Button
        android:text="@string/button_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonChat"
        android:layout_below="@+id/buttonStart"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/button_Weather_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weather_forecast"
        android:layout_below="@+id/buttonChat"
        android:layout_alignParentStart="true" />


</RelativeLayout>